; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-terratec.c_vidioc_s_ctrl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-terratec.c_vidioc_s_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_control = type { i32, i32 }
%struct.terratec = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_control*)* @vidioc_s_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_s_ctrl(%struct.file* %0, i8* %1, %struct.v4l2_control* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.v4l2_control*, align 8
  %8 = alloca %struct.terratec*, align 8
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.v4l2_control* %2, %struct.v4l2_control** %7, align 8
  %9 = load %struct.file*, %struct.file** %5, align 8
  %10 = call %struct.terratec* @video_drvdata(%struct.file* %9)
  store %struct.terratec* %10, %struct.terratec** %8, align 8
  %11 = load %struct.v4l2_control*, %struct.v4l2_control** %7, align 8
  %12 = getelementptr inbounds %struct.v4l2_control, %struct.v4l2_control* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  switch i32 %13, label %35 [
    i32 129, label %14
    i32 128, label %29
  ]

14:                                               ; preds = %3
  %15 = load %struct.v4l2_control*, %struct.v4l2_control** %7, align 8
  %16 = getelementptr inbounds %struct.v4l2_control, %struct.v4l2_control* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %14
  %20 = load %struct.terratec*, %struct.terratec** %8, align 8
  %21 = call i32 @tt_mute(%struct.terratec* %20)
  br label %28

22:                                               ; preds = %14
  %23 = load %struct.terratec*, %struct.terratec** %8, align 8
  %24 = load %struct.terratec*, %struct.terratec** %8, align 8
  %25 = getelementptr inbounds %struct.terratec, %struct.terratec* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @tt_setvol(%struct.terratec* %23, i32 %26)
  br label %28

28:                                               ; preds = %22, %19
  store i32 0, i32* %4, align 4
  br label %38

29:                                               ; preds = %3
  %30 = load %struct.terratec*, %struct.terratec** %8, align 8
  %31 = load %struct.v4l2_control*, %struct.v4l2_control** %7, align 8
  %32 = getelementptr inbounds %struct.v4l2_control, %struct.v4l2_control* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @tt_setvol(%struct.terratec* %30, i32 %33)
  store i32 0, i32* %4, align 4
  br label %38

35:                                               ; preds = %3
  %36 = load i32, i32* @EINVAL, align 4
  %37 = sub nsw i32 0, %36
  store i32 %37, i32* %4, align 4
  br label %38

38:                                               ; preds = %35, %29, %28
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local %struct.terratec* @video_drvdata(%struct.file*) #1

declare dso_local i32 @tt_mute(%struct.terratec*) #1

declare dso_local i32 @tt_setvol(%struct.terratec*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
